--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title> hi, i'm angelina! </title>
     </head>
 
-    <!--Introduction-->
+    <!--Introduction--->
 
     <body class = "beige-background">
         
