--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
                             <span class = "typed-text"> </span> <span class = "cursor typing">&nbsp;</span></h1>
                 </div>
                 <div class="image">
-                    <img src="assets/images/myself_.png"  alt="Profile Image" class = "round-borders"
-                    width = "400"
-                    height = "450">
-                    <img class = "border1" src="assets/images/capybara.png" alt="border" width = "300"
+                    <img src="assets/images/f24_headshot.png"  alt = "Profile Image" class = "round-borders" width = "1000"
+                    height = "1000">
+                    <img class = "border1" src="assets/images/capybara.png" alt = "border" width = "300"
                     height = "350">
 
                     <br>
@@ -74,7 +73,7 @@
         <div class = "margin">
             <p> 你好! I'm Angelina, a current second-year undergraduate student at Cornell University
                 pursuing a degree in computer science. Passionate about delving into <span class="highlight-green">diverse realms of computer science</span>, I'm enthusiastic about exploring innovative 
-                solutions in <span class="highlight-green">software development</span> and <span class="highlight-green">intersections in technology</span> to make a <span class="highlight-green">positive impact in communities</span>. 
+                solutions in <span class="highlight-green">software development</span> and its <span class="highlight-green">intersections in technology</span> to make a <span class="highlight-green">positive impact in communities</span>. 
                 <br>
                 <br> Outside of studies, I enjoy playing the violin ( 
                 <a href = "https://cisymphony.org/2023-young-artists/"> my music background</a> ), game pigeon word
@@ -108,7 +107,7 @@
                     <br>
                                 </ul>
             </div>
-            <div class = "image2">
+            <div>
                 <img src="assets/images/violin2.png"  alt="capybara2" class = "round-borders">
             </div>
             
@@ -198,7 +197,7 @@
                         class = "grey-text">&nbsp;August 2024 - Present </span></p>
                     <br>
                     <ul>
-                        <li><span style = "float: left; font-size: 14px"> <a href = "https://www.cuorchestra.org"> Tchaikovsky, Greig, Dvorak, and more! </a>  </span></li>
+                        <li><span style = "float: left; font-size: 14px"> <a href = "https://www.cuorchestra.org/board"> Tchaikovsky, Greig, Dvorak, and more! </a>  </span></li>
                     </ul>
                     <!-- <p style="margin-left: 20px;"><span style="float: left; font-size: 14px;"">Working in in C.Psyd under Professor Marten van Schjindel.</span></p> -->
                     <p><span style = "float: left; font-size: 18px;"><b>Website Chair </b> <span class = "green-text">@ Alpha Omega Epsilon, Professional Engineering Sorority</span> </span> <span
