Fixed image spacing

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                     <br>
                     <i class='bx bx-tag-alt'></i> <b>Fun Fact:</b> I have two pet fish, Eve and Jeffy! 🐟</li>
                     <br>
-                                </ul>
+                </ul>
             </div>
-            <div>
+            <div class = "image2">
                 <img src="assets/images/violin2.png"  alt="capybara2" class = "round-borders">
             </div>
             
